--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+
+
+<!DOCTYPE html>
+<html>
+  <head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
 <div id="canvas"></div>
+
+<script src="index.js">
+</script>
+
+</body>
+</html>
